PostDTO passando o objeto comment não Id mais